#1: just a giant re-naming, re-arrangement of code to match Dave Cheney recommendations

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .tool-versions
 .envrc
 *.toml
-cmd/elastic_query/elastic_query
-cmd/graphql_server/graphql_server
+cmd/vivo_mappings/vivo_mappings
+cmd/vivoql/vivoql
 .vscode
