--- a/config.toml.example
+++ b/config.toml.example
@@ -3,3 +3,10 @@ url = "http://localhost:9200"
 
 [graphql]
 port = 9001
+
+[template]
+layout = "schema-templates/layout/"
+include = "schema-templates/"
+
+[schemas]
+dir = "json-schemas/"
