--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
-# FIXME: this starst elastic and postgres - but does not
-# deal with running the go importer code
 version: "2"
 services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.5.1
+    container_name: pe_elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - http.cors.enabled=true
+      - http.cors.allow-origin=*
+      - http.cors.allow-headers=Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With
+      - http.cors.allow-credentials=true
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      -vivoql_network
   gographql:
     image: golang:1.11.1
     working_dir: /app
@@ -13,13 +27,16 @@ services:
     environment:
       - GOPATH=/go
     networks:
-      - elasticsearch_network
+      - vivoql_network
     command: >
         bash -c "./build.sh
-        && ./cmd/graphql_server/graphql_server"
+        && ./cmd/vivoql/vivoql"
 
 networks:
-  elasticsearch_network:
-    external:
-      name: elastic_import_es_network
+  vivoql_network:
+    driver: bridge
+
+volumes:
+  esdata:
+    driver: local
 
