--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: "2"
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.5.1
-    container_name: pe_elasticsearch
+    container_name: vq_elasticsearch
     environment:
+      # likely need to change
       - discovery.type=single-node
       - xpack.security.enabled=false
       - http.cors.enabled=true
@@ -11,6 +12,7 @@ services:
       - http.cors.allow-headers=Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With
       - http.cors.allow-credentials=true
     volumes:
+      # need to change ... right?
       - esdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
