#1: refactor elastic client with interface so a solr client could (in theory) be made later on

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - vivoql_network
     command: >
         bash -c "./build.sh
-        && ./cmd/vivoql/vivoql"
+        && ./cmd/vivograph/vivograph --serve"
 
 networks:
   vivoql_network:
