#1: a) add provisional docker-compose for starting elastic dedicated to testing b) add a few stray future code snippets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - vivoql_network
     command: >
         bash -c "./build.sh
-        && ./cmd/vivograph/vivograph --serve"
+        && ./cmd/vivograph/vivograph"
 
 networks:
   vivoql_network:
