--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,3 +1,5 @@
+# TODO: maybe do something like this for testing:
+#https://www.digitalocean.com/community/tutorials/how-to-configure-a-continuous-integration-testing-environment-with-docker-and-docker-compose-on-ubuntu-14-04
 version: "3"
 services:
   elasticsearch:
